--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -587,7 +587,7 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe zbatim)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
-getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe mikrofon
+getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe zbatim)
 getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe zbatim)
@@ -616,6 +616,6 @@ customizeTips.tip0.learnMore = Mësoni më tepër
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartNeeded.description = Riniseni %S-in që të zbatohen përditësimet
-appmenu.updateFailed.description = Përditësimi i sfondit dështoi, ju lutemi, shkarkoni përditësimin
-appmenu.restartBrowserButton.label = Rinise %S-in
+appmenu.updateFailed.description = Përditësimi në prapaskenë dështoi, ju lutemi, shkarkoni përditësimin
+appmenu.restartBrowserButton.label = Rinisni %S-in
 appmenu.downloadUpdateButton.label = Shkarkoje Përditësimin
