--- a/sq/browser/chrome/browser/downloads/downloads.properties
+++ b/sq/browser/chrome/browser/downloads/downloads.properties
@@ -47,7 +47,7 @@ stateDirty=U bllokua: Ka gjasa se përmban virus ose spyware
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 blockedMalware=Kjo kartelë përmban virus ose malware.
 blockedPotentiallyUnwanted=Kjo kartelë mund të dëmtojë kompjuterin tuaj.
-blockedUncommon=Kjo kartelë mund të mos jetë e parrezikshme për hapje.
+blockedUncommon=Hapja e kësaj kartele mund të mos jetë e parrezik.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -57,13 +57,13 @@ blockedUncommon=Kjo kartelë mund të mos jetë e parrezikshme për hapje.
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
-unblockHeader=Are you sure you want to unblock this file?
+unblockHeader=Jeni i sigurt se doni të zhbllokohet kjo kartelë?
 unblockTypeMalware=Kjo kartelë përmban virus ose malware që do të dëmtojë kompjuterin tuaj.
 unblockTypePotentiallyUnwanted=Kjo kartelë, e maskuar si shkarkim i dobishëm, do të kryejë ndryshime të papritura te programet dhe rregullimet tuaja.
-unblockTypeUncommon=Kjo kartelë është shkarkuar prej një sajti jo të njohur dhe potencialisht të rrezikshëm dhe mund të mos jetë e parrezikshme për hapje.
+unblockTypeUncommon=Kjo kartelë është shkarkuar prej një sajti të pazakontë dhe potencialisht të rrezikshëm dhe hapja e saj mund të mos jetë e parrezik.
 unblockTip=Mund të kërkoni për një burim alternativ shkarkimi ose të provoni ta shkarkoni kartelën më vonë.
 unblockButtonContinue=Zhbllokoje, sido qoftë
-unblockButtonCancel=Mbromë
+unblockButtonCancel=Mbamë të parrezikuar
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
