--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -14,7 +14,7 @@ first_time_experience_title={{clientShortname}} — Fillojani bashkëbisedimit
 first_time_experience_button_label=Si T’ia Fillohet
 
 share_link_header_text=Ndajeni këtë lidhje me dikë për ta ftuar të bisedoni:
-invite_header_text=Ftoni dikë për të biseduar.
+invite_header_text=Ftoni dikë të bisedojë me ju.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -64,7 +64,7 @@ retry_button=Riprovoni
 
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bashkëbisedim video duke përdorur {{clientShortname}}:\r\n\r\nNuk keni pse shkarkoni apo instaloni gjë. Thjesht kopjoni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}} te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
+share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bashkëbisedim video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
 share_button=Email
 share_button2=Lidhje Email-i
 copy_url_button=Kopjoje
@@ -99,7 +99,7 @@ new_contact_button=Kontakt i Ri
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Emër
 new_contact_email_placeholder=Email
-new_contact_phone_placeholder=Telefon Firefox OS
+new_contact_phone_placeholder=Telefon Me Firefox OS
 
 contacts_blocked_contacts=Kontakte të Bllokuar
 
@@ -310,17 +310,17 @@ rooms_list_copy_url_tooltip=Kopjoni Lidhjen
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
-rooms_list_current_conversations=Bashkëbisedim i tanishëm;Bashkëbisedime të tanishme
+rooms_list_current_conversations=Bashkëbisedimi i tanishëm;Bashkëbisedime të tanishme
 rooms_list_delete_tooltip=Fshijeni bashkëbisedimin
 rooms_list_deleteConfirmation_label=Jeni i sigurt?
 rooms_list_no_current_conversations=Pa bashkëbisedime hapur
-rooms_name_this_room_label=I vini emër këtij bashkëbisedimi
+rooms_name_this_room_label=Emërtojeni këtë bashkëbisedim
 rooms_new_room_button_label=Filloni një bashkëbisedim
 rooms_only_occupant_label=Jeni i pari deri tani.
-rooms_panel_title=Zgjidhni një bashkëbisedim ose filloni një të ri
-rooms_room_full_label=Ka tashmë dy persona në këtë bashkëbisedim.
+rooms_panel_title=Zgjidhni një bashkëbisedim ose nisni një të ri
+rooms_room_full_label=Ka tashmë dy vetë në këtë bashkëbisedim.
 rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që të filloni tuajin
-rooms_room_full_call_to_action_label=Mësoni më tepër rreth {{clientShortname}} »
-rooms_room_joined_label=Dikush hyri te bashkëbisedimi!
+rooms_room_full_call_to_action_label=Mësoni më tepër mbi {{clientShortname}}-un »
+rooms_room_joined_label=Dikush erdhi për bashkëbisedim!
 rooms_room_join_label=Hyni në bashkëbisedim
 
