--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,8 @@ quit-button.tooltiptext.linux2 = Dilni nga %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Dilni nga %1$S (%2$S)
 
-loop-call-button2.label = Filloni një bashkëbisedim
-loop-call-button2.tooltiptext = Filloni një bashkëbisedim
+loop-call-button2.label = Nisni një bashkëbisedim
+loop-call-button2.tooltiptext = Nisni një bashkëbisedim
 
 social-share-button.label = Ndajeni Këtë Faqe Me të Tjerët
 social-share-button.tooltiptext = Ndajeni Këtë Faqe Me të Tjerët
@@ -112,4 +112,4 @@ web-apps-button.tooltiptext = Zbuloni Zbatime
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Hape WebIDE-n
+devtools-webide-button.tooltiptext = WebIDE e Hapur
