--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -624,4 +624,4 @@ customizeTips.tip0.learnMore = Mësoni më tepër
 appmenu.restartNeeded.description = Riniseni %S-in që të zbatohen përditësimet
 appmenu.updateFailed.description = Përditësimi në prapaskenë dështoi, ju lutemi, shkarkoni përditësimin
 appmenu.restartBrowserButton.label = Rinisni %S-in
-appmenu.downloadUpdateButton.label = Download Update
+appmenu.downloadUpdateButton.label = Shkarkoje Përditësimin
