--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -10,8 +10,8 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Merrni pjesë në bashkëbisedim
-first_time_experience_button_label=Fillojani
+first_time_experience_title={{clientShortname}} — Fillojani bashkëbisedimit
+first_time_experience_button_label=Si T’ia Fillohet
 
 share_link_header_text=Ndajeni këtë lidhje me dikë për ta ftuar të bisedoni:
 invite_header_text=Ftoni dikë të bisedojë me ju.
@@ -65,9 +65,9 @@ retry_button=Riprovoni
 share_email_subject4={{clientShortname}} — Merrni pjesë në bashkëbisedim
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Tungjatjeta!\r\n\r\nEjani për një bashkëbisedim me video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nBisedojmë së shpejti!
+share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bashkëbisedim video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
 share_button=Email
-share_button2=Lidhje Email
+share_button2=Lidhje Email-i
 copy_url_button=Kopjoje
 copy_url_button2=Kopjoje Lidhjen
 copied_url_button=U kopjua!
@@ -266,7 +266,7 @@ legal_text_privacy = Shënimet Mbi Privatësinë
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
-powered_by_beforeLogo=Realizuar nga
+powered_by_beforeLogo=Mundësuar nga
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Si rrodhi bashkëbisedimi juaj?
@@ -299,7 +299,7 @@ tour_label=Tur
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
 rooms_default_room_name_template=Bashkëbisedimi {{conversationLabel}}
-rooms_leave_button_label=Braktiseni
+rooms_leave_button_label=Braktise
 rooms_list_copy_url_tooltip=Kopjoni Lidhjen
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
@@ -309,13 +309,13 @@ rooms_list_copy_url_tooltip=Kopjoni Lidhjen
 rooms_list_current_conversations=Bashkëbisedimi i tanishëm;Bashkëbisedime të tanishme
 rooms_list_delete_tooltip=Fshijeni bashkëbisedimin
 rooms_list_deleteConfirmation_label=Jeni i sigurt?
-rooms_list_no_current_conversations=Pa bashkëbisedimi të tanishme
+rooms_list_no_current_conversations=Pa bashkëbisedime hapur
 rooms_name_this_room_label=Emërtojeni këtë bashkëbisedim
 rooms_new_room_button_label=Filloni një bashkëbisedim
-rooms_only_occupant_label=Jeni i pari këtu.
+rooms_only_occupant_label=Jeni i pari deri tani.
 rooms_panel_title=Zgjidhni një bashkëbisedim ose nisni një të ri
 rooms_room_full_label=Ka tashmë dy vetë në këtë bashkëbisedim.
-rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që të filloni të tuajin
-rooms_room_full_call_to_action_label=Mësoni më tepër mbi {{clientShortname}}-in »
+rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që të filloni tuajin
+rooms_room_full_call_to_action_label=Mësoni më tepër mbi {{clientShortname}}-un »
 rooms_room_joined_label=Dikush erdhi për bashkëbisedim!
 rooms_room_join_label=Hyni në bashkëbisedim
