--- a/sl/browser/chrome/browser/loop/loop.properties
+++ b/sl/browser/chrome/browser/loop/loop.properties
@@ -306,7 +306,7 @@ rooms_list_copy_url_tooltip=Kopiraj povezavo
 ## language please use {{num}}.
 rooms_list_current_conversations=Trenuten pogovor;Trenutni pogovori
 rooms_list_delete_tooltip=Izbriši pogovor
-rooms_list_deleteConfirmation_label=Ste prepričanii?
+rooms_list_deleteConfirmation_label=Ste prepričani?
 rooms_list_no_current_conversations=Ni trenutnih pogovorov
 rooms_name_this_room_label=Poimenuj pogovor
 rooms_new_room_button_label=Začni pogovor
