--- a/de/mobile/overrides/appstrings.properties
+++ b/de/mobile/overrides/appstrings.properties
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Diese Entscheidung für alle Links von diesem Typ merken.
 externalProtocolLaunchBtn=Anwendung ausführen
 malwareBlocked=Die Seite auf %S wurde als attackierende Seite gemeldet und auf Grund Ihrer Sicherheitseinstellungen blockiert.
 phishingBlocked=Die Website auf %S ist als Seite gemeldet, die Anwender dazu verleiten soll, persönliche bzw. finanzielle Daten preiszugeben.
-cspFrameAncestorBlocked=Diese Webseite hat eine Richtlinie (CSP), die verhindert, dass sie auf diese Weise eingebunden wird.
+cspBlocked=Diese Webseite hat eine Policy-Richtlinie (CSP), die verhindert, dass die Webseite auf diese Weise eingebunden wird.
 corruptedContentError=Die Seite, die Sie anzusehen versuchen, kann nicht angezeigt werden, da ein Fehler in der Datenübertragung festgestellt wurde.
 remoteXUL=Diese Seite verwendet eine nicht mehr unterstützte Methode, die von Firefox standardmäßig nicht mehr angeboten wird.
