Updated latvian translation

--- a/lv/browser/chrome/browser/search.properties
+++ b/lv/browser/chrome/browser/search.properties
@@ -11,5 +11,7 @@ cmd_clearHistory_accesskey=M
 
 cmd_showSuggestions=Rādīt ieteikumus
 cmd_showSuggestions_accesskey=S
+searchHeader=%S meklētājs
+searchPlaceholder=Meklēšana
 
 cmd_addFoundEngine=Pievienot "%S"
