Updated latvian translation

--- a/lv/security/manager/chrome/pipnss/nsserrors.properties
+++ b/lv/security/manager/chrome/pipnss/nsserrors.properties
@@ -318,3 +318,4 @@ SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL saņēma nekorekti noformētu He
 SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL saņēma negaidītu Certificate Status rokas spiediena ziņojumu.
 SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL negaidītu Hello Verify Request rokas spiediena ziņojumu.
 SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=TLS partneris izmanto negaidītu kontrolsummas algoritmu.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=X.509 1. versijas sertifikāts, kas nav drošs tika izmantots, lai izsniegtu servera sertifikātu. X.509 1. versijas sertifikāti ir novecojuši un tos vairs nevajadzētu izmantot.
