--- a/pl/dom/chrome/dom/dom.properties
+++ b/pl/dom/chrome/dom/dom.properties
@@ -174,3 +174,4 @@ KeyNameDeadKeysWarning=Wartości rozpoczynające się od „Dead” własności 
 ImportXULIntoContentWarning=Importowanie węzłów XUL do treści dokumentu jest przestarzałe - funkcjonalność zostanie wkrótce usunięta.
 XMLDocumentLoadPrincipalMismatch=Użycie metody „document.load” jest zabronione dla dokumentów pochodzących z innych okien. Wyłącznie w oknie, w którym dokument został utworzony, można wykonać „.load” dla tego dokumentu. Zamiast tej metody, lepiej używać „XMLHttpRequest”.
 IndexedDBTransactionAbortNavigation=Nieukończona transakcja IndexedDB została przerwana przez nawigację.
+WillChangeBudgetWarning=Użycie pamięci przez własność „will-change” jest zbyt wysokie. Powierzchnia pokrywa %1$S pikseli, budżet jest powierzchnią dokumentu pomnożoną przez %2$S (%3$S pikseli). Wszystkie wystąpienia „will-change” w dokumencie będą ignorowane, gdy budżet zostanie przekroczony.
