--- a/pl/browser/chrome/browser/accounts.properties
+++ b/pl/browser/chrome/browser/accounts.properties
@@ -1,2 +1,13 @@
-needUser=%S wymagane do synchronizacji
-needVerifiedUser=Adres „%S” nie został zweryfikowany
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+needUserShort=%S wymagane do synchronizacji
+needUserLong=Przebudowaliśmy synchronizację, by była łatwiejsza - uaktualnij do Konta Firefoksa, aby kontynuować synchronizowanie.
+upgradeToFxA.label=Uaktualnij
+upgradeToFxA.accessKey=U
+
+needVerifiedUserShort=Adres „%S” nie został zweryfikowany
+needVerifiedUserLong=Otwórz odnośnik weryfikacyjny z wiadomości wysłanej na adres „%S”
+resendVerificationEmail.label=Wyślij ponownie
+resendVerificationEmail.accessKey=W
