--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -71,8 +71,7 @@ copy_url_button=Kopjoje
 copy_url_button2=Kopjoje Lidhjen
 copied_url_button=U kopjua!
 
-
-share_email_subject3=Jeni ftuar në një bashkëbisedim
+share_email_subject4={{clientShortname}} — Merrni pjesë në bashkëbisedim
 
 panel_footer_signin_or_signup_link=Hyni ose Regjistrohuni
 
