--- a/sq/dom/chrome/accessibility/AccessFu.properties
+++ b/sq/dom/chrome/accessibility/AccessFu.properties
@@ -158,6 +158,7 @@ statePressed     =    i shtypur
 stateExpanded    =    i zgjeruar
 stateCollapsed   =    i tkurrur
 stateUnavailable =    jo i passhëm
+stateReadonly    =    vetëm lexim
 stateRequired    =    i domosdoshëm
 stateTraversed   =    i vizituar
 stateHasPopup    =    ka flluskë
