--- a/sq/dom/chrome/layout/css.properties
+++ b/sq/dom/chrome/layout/css.properties
@@ -164,3 +164,4 @@ PEExpectedVariableName=Pritej identifikues për emër ndryshoreje, por u gjet '%
 PEExpectedVariableCommaOrCloseParen=Pritej ',' ose ')' pas emri ndryshoreje te referencë ndryshoreje, por u gjet '%1$S'.
 PEParseSourceSizeListEOF=vlerë gjatësie për kusht media me përputhje
 PEParseSourceSizeListNotComma=Pritej ',' pas vlere, por u gjet '%1$S'
+PECoordinatePair=Pritej dyshe koordinatash, por u gjet '%1$S'.
