--- a/sq/dom/chrome/security/security.properties
+++ b/sq/dom/chrome/security/security.properties
@@ -7,6 +7,7 @@ BlockMixedActiveContent = U bllokua ngarkim lënde të përzierë aktive "%1$S"
 # LOCALIZATION NOTE: Do not translate "X-Content-Security-Policy/Report-Only" or "Content-Security-Policy/Report-Only"
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Sajti specifikoi një krye Strict-Transport-Security të pavlefshme.
+InvalidPKPHeaders=Sajti specifikoi një krye Public-Key-Pins të pavlefshme.
 InsecurePasswordsPresentOnPage=Fusha fjalëkalimesh të pranishme në një faqe jo të sigurt (http://). Kjo përbën një rrezik sigurie që lejon vjedhje kredencialesh hyrjeje të përdoruesve.
 InsecureFormActionPasswordsPresent=Fusha fjalëkalimesh të pranishme në një formular me një veprim të pasigurt (http://) formularësh. Kjo përbën një rrezik sigurie që lejon vjedhje kredencialesh hyrjeje të përdoruesve.
 InsecurePasswordsPresentOnIframe=Fusha fjalëkalimesh të pranishme në një kornizë të pasigurt (http://). Kjo përbën një rrezik sigurie që lejon vjedhje kredencialesh hyrjeje të përdoruesve.
@@ -15,3 +16,6 @@ LoadingMixedDisplayContent=Po ngarkohet lëndë ekrani e përzierë (e pasigurt)
 
 # CORS
 CrossSiteRequestBlocked=Kërkesë Cross-Origin e Bllokuar: Rregulli i së Njëjtës Origjinë e pengon leximin e burimit të largët te %1$S. Kjo mund të ndreqet duke e kaluar burimin nën të njëjtën përkatësi ose duke aktivizuar CORS.
+
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Një iframe që ka allow-scripts dhe allow-same-origin për atributin e vet të bankëprovës mund ta nxjerrë veten nga bankëprova.
