--- a/sq/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sq/security/manager/chrome/pipnss/nsserrors.properties
@@ -303,3 +303,16 @@ SSL_ERROR_UNUSED_5=Kod gabimi të panjohur SSL.
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Shërbyesi përdor key pinning (HPKP) por nuk u krijua dot zinxhir dëshmish të besuara dhe që i korrespondojnë pinset-it. Shkeljet e key pinning-ut nuk mund të anashkalohen.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Shërbyesi përdor një dëshmi me një zgjerim të thjeshtë kufizimesh që e identifikon atë si autoritet dëshmish. Nuk do të duhej të ishte kështu, për një dëshmi të lëshuar siç duhet.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Shërbyesi paraqiti një dëshmi me madhësi kyçi që është shumë e vogël për të vendosur një lidhje të sigurt.
+
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Ortaku SSL përzgjodhi një suitë shifrimi të palejuar për versionin e protokollit të përzgjedhur.
+SSL_ERROR_DIGEST_FAILURE=Funksioni digest dështoi.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Veçori SSL-je e pambuluar për versionin e protokollit.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Shërbyesi e hodhi tej duarshtrëngimin, ngaqë klienti ka zbritur në një version më të ulët TLS-je se sa ai që mbulon shërbyesi.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=U dha algoritëm i pasaktë nënshkrimi te një element i nënshkruar në mënyrë dixhitale.
+SSL_ERROR_INVALID_VERSION_RANGE=Intervali i versionit të SSL-së nuk është i vlefshëm.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Zgjerimi pasues për negociim protokollesh u aktivizua, por callback-u u pastrua përpara se të nevojitej.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Shërbyesi nuk mbulon ndonjë nga protokollet që klienti reklamon te zgjerimi ALPN.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL-ja mori një mesazh  të keqformuar duarshtrëngimi Hello Verify Request.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL-ja mori një mesazh të papritur duarshtrëngimi Certificate Status.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL-ja mori një mesazh të papritur duarshtrëngimi Hello Verify Request.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algoritëm hashi i pambuluar, i përdorur nga ortaku TLS.
