[es-MX] update from Pootle (firefox)

--- a/es-MX/toolkit/chrome/global/aboutSupport.properties
+++ b/es-MX/toolkit/chrome/global/aboutSupport.properties
@@ -84,3 +84,5 @@ minLibVersions = Versión mínima esperada
 loadedLibVersions = Versión en uso
 
 hasSeccompBPF = Seccomp-BPF (sistema de filtro de llamadas)
+canSandboxContent = Arenero para procesar contenidos
+canSandboxMedia = Arenero para extensiones de multimedia
