--- a/es-CL/dom/chrome/dom/dom.properties
+++ b/es-CL/dom/chrome/dom/dom.properties
@@ -144,3 +144,4 @@ KeyNameDeadKeysWarning=Los valores para KeyboardEvent.key que empiezan con "Dead
 ImportXULIntoContentWarning=La importación de nodos XUL a un documento de contenido está obsoleta. Esta funcionalidad será removida pronto.
 XMLDocumentLoadPrincipalMismatch=El uso de document.load está prohibido en documentos que provienen de otra ventana. Solo la ventana en la que ese documento fue creada tiene permiso para llamar .load en ese documento. Preferiblemente, use XMLHttpRequest en su lugar.
 IndexedDBTransactionAbortNavigation=Una transacción de IndexedDB que todavía no había sido completada fue abortada debido a la navegación de la página.
+WillChangeBudgetWarning=El consumo de memoria de Will-change es muy alto. El área cubre %1$S pixeles, el presupuesto es el área del documento multiplicada por %2$S (%3$S pixeles).Todas las ocurrencias de will-change en el documento son ignoradas al estar sobre el presupuesto.
