Bug 1092835 - Log usage of weak ciphers in the console

--- a/pl/dom/chrome/security/security.properties
+++ b/pl/dom/chrome/security/security.properties
@@ -12,3 +12,6 @@ InsecurePasswordsPresentOnIframe=Pola haseł obecne w niezabezpieczonej (http://
 LoadingMixedActiveContent=Wczytywanie mieszanej (niezabezpieczonej) interaktywnej treści na zabezpieczonej stronie „%1$S”
 LoadingMixedDisplayContent=Wczytywanie mieszanej (niezabezpieczonej) prezentacyjnej treści na zabezpieczonej stronie „%1$S”
 BothAllowScriptsAndSameOriginPresent=Ramka posiadająca wartości „allow-scripts” oraz „allow-same-origin” dla atrybutu „sandbox” może usunąć ten atrybut.
+
+WeakProtocolVersionWarning=Serwer używa do szyfrowania, przetarzałego i niebezpiecznego protokołu SSL 3.0.
+WeakCipherSuiteWarning=Serwer używa przetarzałego i niebezpiecznego szyfrowania RC4.
