Getting Fennec Beta ready

--- a/sq/browser/chrome/browser/devtools/timeline.properties
+++ b/sq/browser/chrome/browser/devtools/timeline.properties
@@ -37,5 +37,5 @@ timeline.records=REGJISTRIME
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Stile
 #timeline.label.reflow=Reflow
-timeline.label.paint=Paint
+timeline.label.paint=Ngjyrojse
 timeline.label.domevent=Akt DOM
