--- a/sq/mobile/overrides/passwordmgr.properties
+++ b/sq/mobile/overrides/passwordmgr.properties
@@ -16,14 +16,10 @@ updatePasswordNoUser=Të përditësohet fjalëkalimi i ruajtur për këtë hyrje
 updateButton=Përditësoje
 dontUpdateButton=Mos e përditëso
 
-userSelectText=Ju lutemi, ripohoni për cilin përdorues po ndryshoni fjalëkalimin
+userSelectText=Ju lutemi, ripohoni për cilin përdorues po e ndërroni fjalëkalimin
 passwordChangeTitle=Ripohoni Ndryshimin e Fjalëkalimit
 
 # Strings used by PromptService.js
 rememberPassword=Përdore Përgjegjësin e Fjalëkalimeve për ta mbajtur mend këtë fjalëkalim.
 username=Emër përdoruesi
 password=Fjalëkalim
-
-userSelectText = Ju lutemi, ripohoni se për cilin përdorues po e ndryshoni fjalëkalimin
-
-
