--- a/sq/security/manager/chrome/pipnss/pipnss.properties
+++ b/sq/security/manager/chrome/pipnss/pipnss.properties
@@ -167,7 +167,7 @@ CertDumpVerisignNotices=Njoftime Përdoruesi Verisign
 CertDumpUnused=I papërdorur
 CertDumpKeyCompromise=Kompromis Kyçi
 CertDumpCACompromise=Kompromis AD-je
-CertDumpAffiliationChanged=Ndryshoi Rreshtimi
+CertDumpAffiliationChanged=Rreshtimi Ndryshoi
 CertDumpSuperseded=Vjetruar
 CertDumpCessation=Ndalim i Veprimit
 CertDumpHold=Mbajtje Dëshmie
