--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -214,8 +214,8 @@ selectionHelper.textCopied=Teksti u kopjua në të papastër
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
 casting.sendToDevice=Dërgoje në Pajisje
-#casting.mirrorTab=Mirror Tab
-#casting.mirrorTabStop=Stop Mirror
+casting.mirrorTab=Pasqyroje Skedën
+casting.mirrorTabStop=Ndale Pasqyrimin
 
 # Context menu
 contextmenu.openInNewTab=Hapeni Lidhjen Në Skedë të Re
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Zbatim
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Po dëgjohet tek porta %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Aktivizoni daignostikimin për %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i largët
 
 # Helper apps
 helperapps.open=Hape
