Getting Fennec Aurora ready

--- a/sq/browser/chrome/browser/downloads/downloads.properties
+++ b/sq/browser/chrome/browser/downloads/downloads.properties
@@ -58,7 +58,7 @@ blockedUncommon=Hapja e kësaj kartele mund të mos jetë e parrezik.
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 unblockHeader=Jeni i sigurt se doni të zhbllokohet kjo kartelë?
-unblockTypeMalware=Kjo kartelë përmban virus ose tjetër malware që mund të dëmtojë kompjuterin tuaj.
+unblockTypeMalware=Kjo kartelë përmban virus ose malware që do të dëmtojë kompjuterin tuaj.
 unblockTypePotentiallyUnwanted=Kjo kartelë, e maskuar si shkarkim i dobishëm, do të kryejë ndryshime të papritura te programet dhe rregullimet tuaja.
 unblockTypeUncommon=Kjo kartelë është shkarkuar prej një sajti të pazakontë dhe potencialisht të rrezikshëm dhe hapja e saj mund të mos jetë e parrezik.
 unblockTip=Mund të kërkoni për një burim alternativ shkarkimi ose të provoni ta shkarkoni kartelën më vonë.
