--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -214,8 +214,8 @@ selectionHelper.textCopied=Teksti u kopjua në të papastër
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
 casting.sendToDevice=Dërgoje në Pajisje
-# casting.mirrorTab=Mirror Tab
-# casting.mirrorTabStop=Stop Mirror
+casting.mirrorTab=Pasqyroje Skedën
+casting.mirrorTabStop=Ndale Pasqyrimin
 
 # Context menu
 contextmenu.openInNewTab=Hapeni Lidhjen Në Skedë të Re
@@ -325,7 +325,7 @@ remoteNotificationMessage=Po dëgjohet tek porta %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
 remoteStartNotificationTitle=Aktivizoni diagnostikimin për %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
-remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i largët debugger
+remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i largët
 
 # Helper apps
 helperapps.open=Hape
