--- a/sq/mobile/overrides/passwordmgr.properties
+++ b/sq/mobile/overrides/passwordmgr.properties
@@ -16,7 +16,7 @@ updatePasswordNoUser=Të përditësohet fjalëkalimi i ruajtur për këtë hyrje
 updateButton=Përditësoje
 dontUpdateButton=Mos e përditëso
 
-userSelectText=Ju lutemi, ripohoni për cilin përdorues po ndryshoni fjalëkalimin
+userSelectText=Ju lutemi, ripohoni për cilin përdorues po e ndërroni fjalëkalimin
 passwordChangeTitle=Ripohoni Ndryshimin e Fjalëkalimit
 
 # Strings used by PromptService.js
