--- a/sq/netwerk/necko.properties
+++ b/sq/netwerk/necko.properties
@@ -38,4 +38,4 @@ PhishingAuthAccept=E kuptova dhe do të jem shumë i kujdesshëm
 SuperfluousAuth=Ju ndan një hap nga futja te sajti "%1$S" me emër përdoruesi "%2$S", por sajti nuk lyp mirëfilltësim. Kjo mund të jetë një përpjekje për t’jua hedhur.\n\nA është "%1$S" sajti që doni të vizitoni?
 AutomaticAuth=Ju ndan një hap nga futja te sajti "%1$S" me emër përdoruesi "%2$S".
 
-TrackingUriBlocked=Burimi te "%1$S" u bllokua, ngaqë është i aktivizuar mbrojtja nga gjurmimet.
+TrackingUriBlocked=Burimi te "%1$S" u bllokua, sepse mbrojtja nga gjurmimet është e aktivizuar.
