[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/branding/aboutRights.properties
+++ b/pt-BR/suite/chrome/branding/aboutRights.properties
@@ -3,4 +3,5 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 buttonLabel = Conheça os seus direitos
+buttonAccessKey = K
 notifyRightsText = %S é um software livre e de código aberto da Fundação Mozilla.
