--- a/pt-BR/suite/chrome/browser/pageInfo.properties
+++ b/pt-BR/suite/chrome/browser/pageInfo.properties
@@ -69,6 +69,7 @@ securityNone2=Informação enviada para a internet sem criptografia pode ser vis
 securityNone3=A página que você está visualizando não está criptografada.
 # LOCALIZATION NOTE (securityEncryptionWithBits): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
+securityEncryptionWithBits=Conexão criptografada (chaves binárias: %1$S, %2$S)
 securityEncryption1=A página que você está visualizando foi criptografada antes de começar a ser transmitida pela internet.
 securityEncryption2=A criptografia faz com que seja mais difícil para pessoas sem autorização visualizarem informações navegando entre computadores. Portanto, é muito improvável que alguém leia esta página enquanto estiver navegando na internet.
 securityMixedContent=Conexão parcialmente criptografada
