--- a/pt-BR/suite/chrome/browser/taskbar.properties
+++ b/pt-BR/suite/chrome/browser/taskbar.properties
@@ -13,6 +13,8 @@ taskbar.tasks.composeMessage.label=Compor uma nova mensagem
 taskbar.tasks.composeMessage.description=Compor uma nova mensagem
 taskbar.tasks.openAddressBook.label=Abrir catálogo de endereços
 taskbar.tasks.openAddressBook.description=Abrir seu catálogo de endereços
+taskbar.tasks.openEditor.label=Abrir uma nova página do Composer
+taskbar.tasks.openEditor.description=Criar uma nova página do Composer
 taskbar.frequent.label=Frequente
 taskbar.recent.label=Recentes
 
