[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/bookmarks/bm-props.properties
+++ b/pt-BR/suite/chrome/common/bookmarks/bm-props.properties
@@ -9,8 +9,10 @@ dialogAcceptLabelAddMulti=Adicionar favoritos
 dialogAcceptLabelEdit=Salvar
 dialogTitleAddBookmark=Novo favorito
 dialogTitleAddLivemark=Inscrever nos favoritos
+dialogTitleAddFolder=Nova pasta
 dialogTitleAddMulti=Novos favoritos
 dialogTitleEdit=Propriedades para "%S"
 
 bookmarkAllTabsDefault=[Nome da pasta]
 newBookmarkDefault=Novo favorito
+newLivemarkDefault=Novo favorito RSS
