--- a/sq/dom/chrome/security/security.properties
+++ b/sq/dom/chrome/security/security.properties
@@ -17,3 +17,5 @@ LoadingMixedActiveContent=Po ngarkohet lëndë aktive e përzierë (e pasigurt) 
 LoadingMixedDisplayContent=Po ngarkohet lëndë ekrani e përzierë (e pasigurt) në një faqe të sigurt "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Atributin e të qenit në bankoprovë mund ta heqë një iframe që ka edhe allow-scripts, edhe allow-same-origin për atributin sandbox të saj.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Ky sajt përdor një Dëshmi SHA-1; këshillohet të përdorni dëshmi me algoritme nënshkrimesh që përdorin funksione hash më të fuqishëm se SHA-1.
