--- a/sq/dom/chrome/dom/dom.properties
+++ b/sq/dom/chrome/dom/dom.properties
@@ -226,3 +226,5 @@ KeyNameZoomWarning=Vlera "Zoom" për KeyboardEvent.key është e vjetruar dhe do
 KeyNameDeadKeysWarning=Vlera për KeyboardEvent.key që fillojnë me "Dead" janë të vjetruara do të shkrihen në një thjesht "Dead". Për më tepër ndihmë, shihni https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importimi i nyjeve XUL në një dokument lëndor është vjetruar. Së shpejti ky funksion mund të hiqet.
 XMLDocumentLoadPrincipalMismatch=Përdorimi i document.load është i ndaluar për Dokumente që vijnë nga të tjera Dritare. Vetëm Dritares në të cilën qe krijuar Dokumenti i lejohet të thërrasë .load në atë Dokument. Parapëlqehet përdorimi i XMLHttpRequest më mirë.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Një transaksion IndexedDB që nuk qe plotësuar ende, u ndërpre për shkak të lëvizjes në faqe.
