--- a/sq/dom/chrome/layout/css.properties
+++ b/sq/dom/chrome/layout/css.properties
@@ -166,3 +166,6 @@ PEExpectedVariableCommaOrCloseParen=Pritej ',' ose ')' pas emri ndryshoreje te r
 PEParseSourceSizeListEOF=vlerë gjatësie për kusht media me përputhje
 PEParseSourceSizeListNotComma=Pritej ',' pas vlere, por u gjet '%1$S'
 PECoordinatePair=Pritej dyshe koordinatash, por u gjet '%1$S'.
+PEExpectedPosition=Pritej <position>, por u gjet '%1$S'.
+PEExpectedRadius=Pritej rreze, por u gjet '%1$S'.
+PEPositionEOF=<position>
