--- a/sq/toolkit/chrome/global/aboutSupport.properties
+++ b/sq/toolkit/chrome/global/aboutSupport.properties
@@ -81,3 +81,7 @@ webglRenderer = Vizatues WebGL
 
 minLibVersions = Version minimum i pritshëm
 loadedLibVersions = Version në përdorim
+
+hasSeccompBPF = Seccomp-BPF (Filtrim Thirrjesh Sistemi)
+canSandboxContent = Mbajtje Brenda Bankëprovës e Proceseve të Lëndës
+canSandboxMedia = Mbajtje Brenda Bankëprovës e Shtojcave Për Media
