--- a/sq/toolkit/chrome/global/aboutTelemetry.properties
+++ b/sq/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Në këtë faqe shfaqen të dhënat e grumbulluara nga Telemetry-a rreth funksionimit, hardware-it, përdorimit dhe personalizimeve. Këto të dhëna i parashtrohen %1$S-it për të ndihmuar në përmirësimin e %2$S.
 
+generalDataHeadingName = Emër
+
+generalDataHeadingValue = Vlerë
+
 slowSqlMain = Deklarime SQL të Ngadalta në Rrjedhën Kryesore
 
 slowSqlOther = Deklarime SQL të Ngadalta në Rrjedhat Ndihmëse
