--- a/sq/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sq/security/manager/chrome/pipnss/nsserrors.properties
@@ -316,3 +316,4 @@ SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algoritëm hashesh i pambuluar, i përdorur
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Shërbyesi përdor key pinning (HPKP) por nuk u krijua dot zinxhir dëshmish të besuara dhe që i korrespondojnë pinset-it. Shkeljet e key pinning-ut nuk mund të anashkalohen.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Shërbyesi përdor një dëshmi me një zgjerim të thjeshtë kufizimesh që e identifikon atë si autoritet dëshmish. Nuk do të duhej të ishte kështu, për një dëshmi të lëshuar siç duhet.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Shërbyesi paraqiti një dëshmi me madhësi kyçi që është shumë e vogël për të vendosur një lidhje të sigurt.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Për emetimin e dëshmisë së shërbyesit u përdor një dëshmi X.509 version 1, e cila nuk është spirancë besimi. Dëshmitë X.509 version 1 janë të vjetruara dhe nuk duhet të përdoren për të nënshkruar dëshmi të tjera.
