--- a/sq/security/manager/chrome/pippki/pippki.properties
+++ b/sq/security/manager/chrome/pippki/pippki.properties
@@ -5,9 +5,7 @@
 #Translated with MozillaTranslator version 5.03
 #Thu Oct 14 12:35:01 EEST 2004
 editTrustWindowTitle=Përpunoni të besuarit e dëshmisë
-pageInfo_Privacy_Weak2=Shifrimi i nivelit të ulët mund të lejojë persona të paautorizuar të shohin këto të dhëna.
 issuerNotTrusted=Ngaqë nuk besoni autoritetin e dëshmive që lëshoi këtë dëshmi, nuk e besoni mirëfilltësinë e kësaj dëshmie, veç në u tregoftë ndryshe këtu.
-pageInfo_Privacy_Weak1=Sajti %S po përdor shifrim të nivelit të ulët për faqen që jeni duke parë.
 devinfo_stat_ready=Gati
 escrowFinalMessage=Do të duhej të klikonit OK vetëm nëse besoni "%S"për mbrojtjen e kyçit tuaj privat të shifrimeve.
 deleteEmailCertTitle=Fshini Dëshmi E-Mail-esh
@@ -15,20 +13,14 @@ resetPreferences=Përdorni këtë buton për të rikthyer parapëlqime sigurie t
 importCACertsPrompt=Përzgjidhni për importim Kartelë që përmban dëshmi AD
 file_browse_Certificate_spec=Kartela Dëshmi
 resetPasswordConfirmationMessage=Fjalëkalimi juaj është ricaktuar.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Lidhje e Shifruar: Shifrim i Nivelit të Ulët (%1$S, kyçe %2$S bitësh)
 deleteEmailCertConfirm=Jeni i sigurt se doni të fshini këto dëshmi e-mail-esh personash?
 devinfo_manID=Prodhues
 unknownIssuer=<Lëshues i Panjohur>
-pageInfo_Privacy_Strong2=Shifrimi e bën shumë të vështirë për persona të paautorizuar të shohin të dhëna që shkëmbehen midis kompjuterësh. Ndaj ka shumë pak gjasa që dikush të lexojë këtë faqe, kur kjo udhëton nëpër rrjet.
 notPresent=<Jo Pjesë Dëshmie>
-pageInfo_Privacy_Strong1=Faqja që jeni duke parë ishte shifruar para se të transmetohej përmes Internetit.
 incorrect_pw=Nuk dhatë Fjalëkalimin e tanishëm të saktë të Përgjithshëm. Ju lutemi, riprovoni.
 chooseP12RestoreFileDialog2=Kartelë Dëshmie Për Importim
 file_browse_PKCS12_spec=Kartela PKCS12
 devinfo_desc=Përshkrim
-pageInfo_SiteNotVerified=Sajt Jo i Verifikuar
 pw_erased_ok=Kujdes! Keni fshirë Fjalëkalimin tuaj të Përgjithshëm.
 failed_pw_change=Nuk arrin të ndryshojë Fjalëkalimin e Përgjithshëm.
 certNotVerified_Unknown=Për arsye të panjohura, s’verifikoi dot këtë dëshmi.
@@ -36,19 +28,16 @@ certNotVerified_IssuerUnknown=S’verifikoi dot këtë dëshmi, sepse lëshuesi 
 devinfo_stat_disabled=çaktivizuar
 certNotVerified_CertNotTrusted=S’verifikoi dot këtë dëshmi, sepse nuk është besuar.
 chooseP12BackupFileDialog=Emër Kartele për Kopjeruajtje
-pageInfo_NoEncryption=Lidhje Jo e Shifruar.
 pw_not_wanted=Kujdes! Keni vendosur të mos përdorni Fjalëkalim të Përgjithshëm.
 devinfo_stat_uninitialized=I Panisur
 newCAMessage1=Doni të besohet "%S" për qëllimet vijues?
 pw_change2empty_in_fips_mode=Hëpërhë gjendeni nën mënyrën FIPS. FIPS kërkon një Fjalëkalim të Përgjithshëm jo e zbrazët.
 devinfo_modpath=Shteg
 enable_fips=Aktivizo FIPS
-pageInfo_ViewCertificate=Shihni dëshminë e sigurisë që vërteton identitetin e këtij sajti.
 pw_empty_warning=Fjalëkalimet tuaj të ruajtur për email dhe web, të dhëna formularësh, dhe kyçe privatë nuk do të jenë të mbrojtur.
 pw_change_ok=Fjalëkalim i Përgjithshëm i ndryshuar me sukses.
 certNotVerified_IssuerNotTrusted=S’verifikoi dot këtë dëshmi, sepse nuk është besuar lëshuesi. 
 unnamedCA=Autoritet Dëshmish (pa emër)
-pageInfo_WebSiteVerified=Identitet Sajti i Verifikuar
 devinfo_modname=Modul
 issuerNotKnown=Ngaqë nuk njihni autoritetin e dëshmive që ka lëshuar këtë dëshmi, nuk e besoni mirëfilltësinë e kësaj dëshmie, veç në u tregoftë ndryshe këtu.
 
@@ -57,12 +46,11 @@ deleteCaCertImpactX2=Nëse e fshini ose nuk e besoni një dëshmi autoriteti dë
 deleteCaCertTitle2=Fshini ose Mos Besoni Dëshmi AD-sh
 
 devinfo_stat_loggedin=I futur
-pageInfo_Privacy_None3=Faqja që po shihni nuk është e shifruar.
-pageInfo_Privacy_None2=Të dhëna të dërguara përmes Internetit të pashifruara mund të shihen nga persona të tjerë gjatë kohës së transitit.
+
+
 disable_fips=Çaktivizo FIPS
 certNotVerified_CertRevoked=S’verifikoi dot këtë dëshmi, sepse është shfuqizuar.
 CertPassPrompt=Ju lutemi, jepni Fjalëkalimin Vetjak të Sigurisë për Kyçet Private PSM të pajisjeve të sigurisë.
-pageInfo_Privacy_None1=Sajti %S nuk mbulon shifrim për faqen që po shihni.
 deleteUserCertTitle=Fshini Dëshmitë tuaja
 editTrustEmail=Dëshmia "%S" është lëshuar nga:
 certNotVerified_CertExpired=S’verifikoi dot këtë dëshmi, sepse ka skaduar.
@@ -72,11 +60,6 @@ clientAuthMessage1=Organizëm: "%S"
 certNotVerified_CAInvalid=S’verifikoi dot këtë dëshmi, sepse dëshmia e AD-ve është e pavlefshme.  
 deleteUserCertConfirm=Jeni i sigurt se doni të fshini këto dëshmi?
 devinfo_stat_notpresent=Jo i Pranishëm
-
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Lidhje e Shifruar: Shifrim i Nivelit të Lartë (%1$S, kyçe %2$S bitësh)
-
 importEmailCertPrompt=Përzgjidhni Kartelë që përmban dëshmi Email-i të dikujt për t’u importuar
 certVerified=Kjo dëshmi është verifikuar për përdorimet vijuese:
 devinfo_serialnum=Numër Serie
@@ -94,12 +77,7 @@ unable_to_toggle_fips=Nuk arrini të këmbejë mënyrat FIPS për pajisjen e sig
 resetPasswordConfirmationTitle=Ricaktoni Fjalëkalimin e Përgjithshëm
 deleteUserCertImpact=Nëse fshini një nga dëshmitë tuaja vetjake, nuk mund ta përdorni më për identifikimin e vetvetes.
 editTrustCA=Dëshmia "%S" përfaqëson një Autoritet Dëshmish.
-pageInfo_Identity_Verified=Sajti %S mundëson mirëfilltësim për faqen që po shihni. Identiteti i këtij sajti është verifikuar nga %S, një autoritet dëshmish të cilit i besoni për këtë qëllim.
 devinfo_status=Gjendje
-pageInfo_MixedContent=Lidhje Pjesërisht e Shifruar
-pageInfo_Privacy_Mixed1=Pjesë të faqes që po shihni nuk qenë shifruar, para se të transmetoheshin përmes Internetit.
-
-
 writeFileFailure=Gabim Kartele
 writeFileFailed=S’shkruan dot te kartela %S:\n%S.
 writeFileAccessDenied=Hyrje e mohuar
@@ -115,19 +93,19 @@ deleteEmailCertImpactDesc=Nëse fshini dëshminë e e-mail-it të dikujt, nuk do
 addExceptionValidShort=Dëshmi e Vlefshme
 addExceptionValidLong=Ky sajt furnizon identifikim të vlefshëm, të vërtetuar.  Nuk ka nevojë të shtohet përjashtim.
 addExceptionUnverifiedOrBadSignatureShort=Identitet i Panjohur
-addExceptionUnverifiedOrBadSignatureLong=Dëshmia nuk u besua, ngaqë s’është vërtetuar nga një autoritet i mirëpranuar që përdor nënshkrim të sigurt.
+addExceptionUnverifiedOrBadSignatureLong2=Dëshmia nuk u besua, ngaqë s’është vërtetuar si e lëshuar nga një autoritet i besuar që përdor nënshkrim të sigurt.
 addExceptionNoCertShort=Pa të Dhëna të Passhme
-addExceptionNoCertLong=Nuk arrihet të merret gjendje identifikimi për sajtin e dhënë.
+addExceptionNoCertLong2=Nuk arrihet të merret gjendje identifikimi për këtë sajt.
+
 addExceptionInvalidHeader=Ky sajt po përpiqet të identifikojë veten përmes të dhënash të pavlefshme.
 addExceptionExpiredShort=Të dhëna të Vjetruara
-addExceptionExpiredLong=Dëshmia nuk është e vlefshme hëpërhë. Është e pamundur të verifikohet nëse ky identitet është njoftuar si i përvetësuar apo i humbur.
+addExceptionExpiredLong2=Dëshmia nuk është e vlefshme hëpërhë. Mund të jetë vjedhur ose humbur, dhe mund të përdoret nga dikush për ta bërë një sajt të vetin të duket si i juaji.
 addExceptionDomainMismatchShort=Sajt i Gabuar
-addExceptionDomainMismatchLong=Dëshmia i përket një sajti tjetër, çka mund të jetë shenjë përvetësimi identiteti.
+addExceptionDomainMismatchLong2=Dëshmia i përket një sajti tjetër, çka mund të jetë shenjë se dikush po përpiqet të bëjë një sajt të duket si i juaji.
 addExceptionBrandedWarning2=Jeni duke anashkaluar mekanizmin se si %S-i identifikon këtë sajt.
-
 addExceptionCheckingShort=Po Kontrollohen Të Dhënat
-addExceptionCheckingLong=Përpjekje për identifikimin e sajtit…
-addExceptionConnectionFailed=Dështoi Lidhje
+addExceptionCheckingLong2=Përpjekje për identifikimin e këtij sajti… 
+addExceptionConnectionFailed=Dështoi Lidhja
 
 importServerCertPrompt=Përzgjidhni Kartelën që përmban dëshmi Shërbyesi për t’u importuar
 
@@ -144,3 +122,21 @@ certNotVerified_AlgorithmDisabled=Kjo dëshmi nuk u verifikua dot, ngaqë qe në
 #Certificate Exists in database
 caCertExistsTitle=Dëshmia Ekziston
 caCertExistsMessage=Dëshmia ekziston tashmë.
+
+#Page Info
+pageInfo_SiteNotVerified=Sajt Jo i Verifikuar
+pageInfo_WebSiteVerified=Identitet Sajti i Verifikuar
+pageInfo_Identity_Verified=Sajti %S mundëson mirëfilltësim për faqen që po shihni. Identiteti i këtij sajti është verifikuar nga %S, një autoritet dëshmish të cilit i besoni për këtë qëllim.
+pageInfo_ViewCertificate=Shihni dëshminë e sigurisë që vërteton identitetin e këtij sajti.
+pageInfo_NoEncryption=Lidhje Jo e Shifruar.
+pageInfo_Privacy_None1=Sajti %S nuk mbulon shifrim për faqen që po shihni.
+pageInfo_Privacy_None2=Të dhëna të dërguara përmes Internetit të pashifruara mund të shihen nga persona të tjerë gjatë kohës së transitit. 
+pageInfo_Privacy_None3=Faqja që po shihni nuk është e shifruar.
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# %2$S is the key size of the cipher.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Lidhje e Koduar (%1$S, kyçr %2$S bit, %3$S)
+pageInfo_Privacy_Encrypted1=Faqja që po shihni qe koduar, përpara se të transmetohej nëpër Internet.
+pageInfo_Privacy_Encrypted2=Kodimi e bën të vështirë parjen e të dhënave që udhëtojnë mes kompjuterave për persona të paautorizuar. Ndaj ka shumë pak gjasa që dikush ta lexojë këtë faqe, teksa ajo udhëton nëpër rrjet.
+pageInfo_MixedContent=Lidhje Pjesërisht e Shifruar
+pageInfo_Privacy_Broken1=Pjesë të faqes që po shihni nuk qenë koduar, ose kodimi nuk qe mjaftueshmërisht i fortë, përpara se të transmetoheshin nëpër Internet.
