--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -323,7 +323,7 @@ remoteNotificationGenericName=Zbatim
 # the remote debugger server is listening.
 remoteNotificationMessage=Po dëgjohet tek porta %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
-remoteStartNotificationTitle=Aktivizoni daignostikimin për %S
+remoteStartNotificationTitle=Aktivizoni diagnostikimin për %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
 remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i largët
 
