--- a/sq/security/manager/chrome/pippki/pippki.properties
+++ b/sq/security/manager/chrome/pippki/pippki.properties
@@ -127,7 +127,7 @@ addExceptionBrandedWarning2=Jeni duke anashkaluar mekanizmin se si %S-i identifi
 
 addExceptionCheckingShort=Po Kontrollohen Të Dhënat
 addExceptionCheckingLong=Përpjekje për identifikimin e sajtit…
-addExceptionConnectionFailed=Dështoi Lidhje
+addExceptionConnectionFailed=Dështoi Lidhja
 
 importServerCertPrompt=Përzgjidhni Kartelën që përmban dëshmi Shërbyesi për t’u importuar
 
