[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -305,6 +305,8 @@ rooms_list_delete_tooltip=Ta bort konversation
 rooms_list_deleteConfirmation_label=Är du säker?
 rooms_list_no_current_conversations=Inga aktuella konversationer
 rooms_name_this_room_label=Namnge denna konversation
+rooms_name_this_room_tooltip2=Klicka för att redigera konversations namnet
+rooms_name_change_failed_label=Konversationen kan inte döpas om
 rooms_new_room_button_label=Starta en konversation
 rooms_only_occupant_label=Du är först här.
 rooms_panel_title=Välj en konversation eller starta en ny
