--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -301,7 +301,8 @@ identity.identified.verified_by_you=Keni shtuar përjashtim sigurie për këtë 
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Lidhja te ky sajt është e sigurt.
-identity.mixed_display_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar (fjala vjen, figura).
+identity.broken_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar ents (fjala vjen, figura) ose shifrimi nuk është aq i fuqishëm sa duhet.
+
 identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e shifruar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
 identity.unencrypted=Lidhja juaj te ky sajt nuk është e shifruar.
 
