--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = Dilni nga %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Dilni nga %1$S (%2$S)
 
-loop-call-button2.label = Nisni një bashkëbisedim
-loop-call-button2.tooltiptext = Nisni një bashkëbisedim
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Nisni një bashkëbisedim
 
 social-share-button.label = Ndajeni Këtë Faqe Me të Tjerët
 social-share-button.tooltiptext = Ndajeni Këtë Faqe Me të Tjerët
@@ -111,5 +113,6 @@ web-apps-button.tooltiptext = Zbuloni Zbatime
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = WebIDE e Hapur
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Hapeni WebIDE-n (%S)
