--- a/sq/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sq/browser/chrome/browser/devtools/gclicommands.properties
@@ -1542,3 +1542,7 @@ folderInvalidPath=Ju lutemi, jepni një shteg të vlefshëm
 # describe the result of the 'folder open' command.
 # The argument (%1$S) is the folder path.
 folderOpenDirResult=U hap %1$S
+
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Urdhri '%1$S' nuk mund kihet nën mënyrën multiproces (E10S)
