[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -509,6 +509,8 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 janela);#1 (#2 janelas)
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
+getUserMedia.shareSelectedDevices.label = Compartilhar dispositivo selecionado; Compartilhar dispositivos selecionados
+getUserMedia.shareSelectedDevices.accesskey = C
 getUserMedia.shareScreen.label = Compartilhar tela
 getUserMedia.shareApplication.label = Compartilhar aplicativo selecionado
 getUserMedia.shareWindow.label = Compartilhar janela selecionada
@@ -523,6 +525,8 @@ getUserMedia.sharingScreen.message = Você está compartilhando sua tela com est
 getUserMedia.sharingWindow.message = Você está compartilhando uma janela com esta página.
 getUserMedia.continueSharing.label = Continuar compartilhando
 getUserMedia.continueSharing.accesskey = C
+getUserMedia.stopSharing.label = Parar de compartilhar
+getUserMedia.stopSharing.accesskey = P
 
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
