Update. Cleaning 'bashkëbisedim' redundancy. 'Bisedim' is enough.

--- a/sq/browser/chrome/browser/devtools/timeline.properties
+++ b/sq/browser/chrome/browser/devtools/timeline.properties
@@ -37,5 +37,25 @@ timeline.records=REGJISTRIME
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Stile
 #timeline.label.reflow=Reflow
-timeline.label.paint=Ngjyrojse
+timeline.label.paint=Ngjyrosje
+timeline.label.javascript=Javascript
 timeline.label.domevent=Akt DOM
+timeline.label.consoleTime=Konsol
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Fillim:
+timeline.markerDetail.end=Mbarim:
+timeline.markerDetail.duration=Kohëzgjatje:
+timeline.markerDetail.consoleTimerName=Emër Kohëmatësi:
+timeline.markerDetail.DOMEventType=Lloj Akti:
+timeline.markerDetail.DOMEventPhase=Fazë:
+timeline.markerDetail.DOMEventTargetPhase=Objektiv
+timeline.markerDetail.DOMEventCapturingPhase=Regjistroje
+# timeline.markerDetail.DOMEventBubblingPhase=Bubbling
