--- a/sq/browser/chrome/browser/devtools/toolbox.properties
+++ b/sq/browser/chrome/browser/devtools/toolbox.properties
@@ -79,3 +79,7 @@ options.lightTheme.label=Temë e çelët
 # the devtools window.
 options.label=Mundësi
 
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Nuk ka proces lënde në punë e sipër.
