--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,7 +100,7 @@ quit-button.tooltiptext.mac = Dilni nga %1$S (%2$S)
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
 loop-call-button3.label = Hello
-loop-call-button3.tooltiptext = Nisni një bashkëbisedim
+loop-call-button3.tooltiptext = Nisni një bisedë
 
 social-share-button.label = Ndajeni Këtë Faqe Me të Tjerët
 social-share-button.tooltiptext = Ndajeni Këtë Faqe Me të Tjerët
