--- a/sq/browser/chrome/browser/devtools/webide.properties
+++ b/sq/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Nuk lidhet dot me zbatimin: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Nuk sillet dot lista e shtesave: %S
 
+error_appProjectsLoadFailed=Nuk arrin të ngarkojë listë projektesh. Kjo mund të ndodhë nëse e keni përdorur këtë profil me një version më të ri të Firefox-it.
+
 addons_stable=e qëndrueshme
 addons_unstable=e paqëndrueshme
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Simulues Firefox OS %1$S (%2$S)
 addons_install_button=instaloje
 addons_uninstall_button=çinstaloje
 addons_adb_label=Shtesa ADB Helper
+addons_adapters_label=Shtesa Përshtatës Mjetesh
 addons_adb_warning=Pa këtë shtesë pajisjet USB nuk do të kapen dot
 addons_status_unknown=?
 addons_status_installed=E instaluar
@@ -71,3 +74,6 @@ status_valid=E VLEFSHME
 status_warning=SINJALIZIME
 status_error=GABIME
 status_unknown=E PANJOHUR
+
+# Preferences
+devicepreferences_reset_default=Riktheje te parazgjedhjet
