--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -10,7 +10,7 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Fillojani bashkëbisedimit
+first_time_experience_title={{clientShortname}} — Fillojani bisedave
 first_time_experience_button_label=Si T’ia Fillohet
 
 share_link_header_text=Ndajeni këtë lidhje me dikë për ta ftuar të bisedoni:
@@ -62,10 +62,10 @@ problem_accessing_account=Pati Një Problem Me Hyrjen Në Llogarinë Tuaj
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Riprovoni
 
-share_email_subject4={{clientShortname}} — Merrni pjesë në bashkëbisedim
+share_email_subject4={{clientShortname}} — Merrni pjesë në bisedë
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bashkëbisedim video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
+share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bisedë video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
 share_button=Email
 share_button2=Lidhje Email-i
 copy_url_button=Kopjoje
@@ -97,7 +97,8 @@ new_contact_button=Kontakt i Ri
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Emër
 new_contact_email_placeholder=Email
-new_contact_phone_placeholder=Telefon Me Firefox OS
+new_contact_fxos_phone_placeholder=Telefon Me Firefox OS
+new_contact_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Kontakte të Bllokuar
 
@@ -126,12 +127,9 @@ sync_contacts_button=Njëkohësoni Kontakte
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Na ndjeni, importimi i kontaktit dështoi
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Na ndjeni, importimi i kontaktit dështoi, ju lutemi, për ndihmë shihni te {{import_failed_support_link_label}}
+import_failed_description_some=Disa kontakte nuk u importuan dot
+import_failed_support_button=Ndihmë
+
 import_failed_support_link_label=sajt asistence
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -177,17 +175,17 @@ edit_contact_done_button=U bë
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-audio_call_menu_button=Bashkëbisedim Me Zë
+audio_call_menu_button=Bisedë Me Zë
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-video_call_menu_button=Bashkëbisedim Me Video
+video_call_menu_button=Bisedë Me Video
 
 # Conversation Window Strings
 
-initiate_call_button_label2=Gati për të filluar bashkëbisedimin?
-incoming_call_title2=Kërkesë Bashkëbisedimi
+initiate_call_button_label2=Gati për të filluar bisedën?
+incoming_call_title2=Kërkesë Bisede
 incoming_call_accept_button=Pranoje
 incoming_call_accept_audio_only_tooltip=Pranoje me zë
 incoming_call_accept_audio_video_tooltip=Pranoje me video
@@ -206,14 +204,14 @@ unmute_local_video_button_title=Hapjani videon
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
-call_with_contact_title=Bashkëbisedim me {{contactName}}
+call_with_contact_title=Bisedë me {{contactName}}
 
 # Outgoing conversation
 
-outgoing_call_title=Të fillohet bashkëbisedimi?
+outgoing_call_title=Të fillohet biseda?
 initiate_audio_video_call_button2=Filloje
-initiate_audio_video_call_tooltip2=Filloni një bashkëbisedim me video
-initiate_audio_call_button2=Bashkëbisedim me zë
+initiate_audio_video_call_tooltip2=Filloni një bisedë me video
+initiate_audio_call_button2=Bisedë me zë
 initiate_call_cancel_button=Anuloje
 
 
@@ -226,8 +224,8 @@ call_progress_connecting_description=Po lidhet…
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 call_progress_ringing_description=Po i bihet ziles…
 
-peer_ended_conversation2=Personi që po thirrej i dha fund bashkëbisedimit.
-conversation_has_ended=Bashkëbisedimi juaj përfundoi.
+peer_ended_conversation2=Personi që po thirrej i dha fund bisedës.
+conversation_has_ended=Bbiseda juaj përfundoi.
 restart_call=Rifillojeni
 
 generic_failure_title=Diç shkoi ters.
@@ -269,7 +267,7 @@ legal_text_privacy = Shënimet Mbi Privatësinë
 powered_by_beforeLogo=Mundësuar nga
 powered_by_afterLogo=
 
-feedback_call_experience_heading2=Si rrodhi bashkëbisedimi juaj?
+feedback_call_experience_heading2=Si rrodhi biseda juaj?
 feedback_what_makes_you_sad=Ç’ju trishton?
 feedback_thank_you_heading=Faleminderit për përshtypjet!
 feedback_category_audio_quality=Cilësia e zërit
@@ -298,7 +296,7 @@ tour_label=Tur
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
-rooms_default_room_name_template=Bashkëbisedimi {{conversationLabel}}
+rooms_default_room_name_template=Bisedë {{conversationLabel}}
 rooms_leave_button_label=Braktise
 rooms_list_copy_url_tooltip=Kopjoni Lidhjen
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
@@ -306,16 +304,18 @@ rooms_list_copy_url_tooltip=Kopjoni Lidhjen
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
-rooms_list_current_conversations=Bashkëbisedimi i tanishëm;Bashkëbisedime të tanishme
-rooms_list_delete_tooltip=Fshijeni bashkëbisedimin
+rooms_list_current_conversations=Bisedë e tanishme;Biseda të tanishme
+rooms_list_delete_tooltip=Fshijeni bisedën
 rooms_list_deleteConfirmation_label=Jeni i sigurt?
-rooms_list_no_current_conversations=Pa bashkëbisedime hapur
-rooms_name_this_room_label=Emërtojeni këtë bashkëbisedim
-rooms_new_room_button_label=Filloni një bashkëbisedim
+rooms_list_no_current_conversations=Pa biseda hapur
+rooms_name_this_room_label=Emërtojeni këtë bisedë
+rooms_name_this_room_tooltip2=Klikoni që të përpunoni emrin e bisedës
+rooms_name_change_failed_label=Biseda nuk u riemërtua dot
+rooms_new_room_button_label=Filloni një bisedë
 rooms_only_occupant_label=Jeni i pari deri tani.
-rooms_panel_title=Zgjidhni një bashkëbisedim ose nisni një të ri
-rooms_room_full_label=Ka tashmë dy vetë në këtë bashkëbisedim.
+rooms_panel_title=Zgjidhni një bisedë ose nisni një të re
+rooms_room_full_label=Ka tashmë dy vetë në këtë bisedë.
 rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që të filloni tuajin
 rooms_room_full_call_to_action_label=Mësoni më tepër mbi {{clientShortname}}-un »
-rooms_room_joined_label=Dikush erdhi për bashkëbisedim!
-rooms_room_join_label=Hyni në bashkëbisedim
+rooms_room_joined_label=Dikush erdhi për bisedë!
+rooms_room_join_label=Hyni në bisedë
