--- a/sq/browser/chrome/browser/shellservice.properties
+++ b/sq/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = JN
 setDefaultBrowserNever.label       = Mos më pyet më
 setDefaultBrowserNever.accesskey   = o
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Shfletues Parazgjedhje
+setDefaultBrowserMessage=%S nuk është i caktuar si shfletuesi juaj parazgjedhje. do të donit ta bënit shfletuesin tuaj parazgjedhje?
+setDefaultBrowserDontAsk=Kryje përherë këtë kontroll gjatë nisjes së %S.
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Pamja po ruhet…
