--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -118,7 +118,7 @@ add_or_import_contact_title=Shtoni ose Importoni Kontakte
 ## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where these appear on the UI
-import_contacts_button=Importoje
+import_contacts_button=Importo
 importing_contacts_progress_button=Po importohet…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
@@ -129,8 +129,6 @@ sync_contacts_button=Njëkohësoni Kontakte
 import_failed_description_simple=Na ndjeni, importimi i kontaktit dështoi
 import_failed_description_some=Disa kontakte nuk u importuan dot
 import_failed_support_button=Ndihmë
-
-import_failed_support_link_label=sajt asistence
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -319,3 +317,4 @@ rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që t
 rooms_room_full_call_to_action_label=Mësoni më tepër mbi {{clientShortname}}-un »
 rooms_room_joined_label=Dikush erdhi për bisedë!
 rooms_room_join_label=Hyni në bisedë
+rooms_signout_alert=Bisedat e hapura do të mbyllen
