--- a/sq/browser/chrome/overrides/appstrings.properties
+++ b/sq/browser/chrome/overrides/appstrings.properties
@@ -31,6 +31,6 @@ contentEncodingError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ng
 resendButton.label=Ridërgoji
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don't translate "%S"
 confirmRepostPrompt=Për të shfaqur këtë faqe, %S-i duhet të dërgojë të dhëna që do të shkaktojnë përsëritjen e cilitdo veprim (fjala vjen kërkim apo ripohim porosie) që po kryhej më parë.
-cspFrameAncestorBlocked=Kjo faqe përmban një rregull sigurie lënde i cili e pengon trupëzimin e saj në këtë mënyrë.
+cspBlocked=Kjo faqe përmban një rregull sigurie lënde i cili e pengon trupëzimin e saj në këtë mënyrë.
 corruptedContentError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë u kap një gabim në transmetimin e të dhënave.
 remoteXUL=Kjo faqe përdor një teknologji të pambuluar që nuk është më pjesë e Firefox-it si parazgjedhje.
