Bug 1098661 - Update sync in-content preferences UI to match FxA migration flows

--- a/sk/browser/chrome/browser/accounts.properties
+++ b/sk/browser/chrome/browser/accounts.properties
@@ -17,3 +17,6 @@ needVerifiedUserLong = Prosím, kliknite na overovací odkaz v e-mailovej správ
 
 resendVerificationEmail.label = Znova odoslať
 resendVerificationEmail.accessKey = Z
+
+forgetMigration.label = Zabudnúť
+forgetMigration.accessKey = b
