--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -115,4 +115,4 @@ web-apps-button.tooltiptext = Zbuloni Zbatime
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
-devtools-webide-button2.tooltiptext = Hapeni WebIDE-n (%S)
+devtools-webide-button2.tooltiptext = WebIDE e Hapur (%S)
