--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,8 @@ quit-button.tooltiptext.linux2 = Dilni nga %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Dilni nga %1$S (%2$S)
 
-loop-call-button2.label = Nisni një bashkëbisedim
-loop-call-button2.tooltiptext = Nisni një bashkëbisedim
+loop-call-button2.label = Nisni një bisedë
+loop-call-button2.tooltiptext = Nisni një bisedë
 
 social-share-button.label = Ndajeni Këtë Faqe Me të Tjerët
 social-share-button.tooltiptext = Ndajeni Këtë Faqe Me të Tjerët
