--- a/sq/mobile/overrides/appstrings.properties
+++ b/sq/mobile/overrides/appstrings.properties
@@ -30,7 +30,7 @@ externalProtocolChkMsg=Mba mend zgjedhjen time për tërë lidhjet e këtij lloj
 externalProtocolLaunchBtn=Nise zbatimin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar duke u bazuar në parapëlqimet tuaja të sigurisë.
 phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
-cspFrameAncestorBlocked=Për këtë faqe ka një rregull sigurie lënde që e pengon të trupëzohet në këtë mënyrë.
+cspFrameAncestorBlocked=Për këtë faqe ka një rregull sigurie lënde që ia parandalon trupëzimin në këtë mënyrë.
 resendButton.label=Ridërgoje
 corruptedContentError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë u kap një gabim në transmetimin e të dhënave.
 remoteXUL=Kjo faqe përdor një teknologji të pambuluar që nuk është më pjesë e Firefox-it si parazgjedhje.
