Fixing typos reported in bug 1108619, bug 1108630 and bug 1110313

--- a/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -10,7 +10,7 @@ privatebrowsing-button.label = Uusi yksityinen ikkuna
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
 privatebrowsing-button.tooltiptext = Avaa yksityinen selaaminen -ikkuna (%S)
 
-save-page-button.label = Save Page
+save-page-button.label = Tallenna sivu
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
 save-page-button.tooltiptext3 = Tallenna avoin sivu (%S)
 
