--- a/fi/browser/chrome/browser/newTab.properties
+++ b/fi/browser/chrome/browser/newTab.properties
@@ -19,7 +19,7 @@ newtab.sponsored.explain=Tämä ruutu tulee Mozillan yhteistyökumppanilta. Voit
 newtab.enhanced.explain=Mozillan yhteistyökumppani on muuttanut ruudun ulkonäköä korvaamalla kuvankaappauksen. Voit estää ruutujen ulkonäön muuttamisen muokkaamalla asetuksia %1$S-painikkeesta. %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
-newtab.intro.paragraph1=Uusi välilehti sivulla näkyy ruuduissa useimmin vieraillut sivustot ja muutama ruutu, jonka uskomme kiinnostavan sinua. Jotkin näistä ruuduista voivat olla Mozillan yhteistyökumppanien sponsoroimia. Merkitsemme aina selkeästi ruudut, jotka ovat sponsoroituja. %1$S
+newtab.intro.paragraph1=Uusi välilehti -sivulla näkyy ruuduissa useimmin vieraillut sivustot ja muutama ruutu, jonka uskomme kiinnostavan sinua. Jotkin näistä ruuduista voivat olla Mozillan yhteistyökumppanien sponsoroimia. Merkitsemme aina selkeästi ruudut, jotka ovat sponsoroituja. %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
 newtab.intro.paragraph2=Kyetäkseen tarjoamaan tämän ominaisuuden Mozilla kerää ja käyttää tiettyjä ruutujen käyttöön liittyviä tietoja %1$S mukaisesti.
