[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
@@ -22,6 +22,7 @@ helpAvailable=Tillgängliga kommandon
 
 # LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
 # is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Kommandot '%1$S' är inte tillgängligt i multiprocessläge (E10S)
 
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
