--- a/sv-SE/browser/chrome/browser/devtools/timeline.properties
+++ b/sv-SE/browser/chrome/browser/devtools/timeline.properties
@@ -59,7 +59,9 @@ timeline.markerDetailFormat=%1$S (%2$S)
 timeline.markerDetail.start=Starta:
 timeline.markerDetail.end=Slut:
 timeline.markerDetail.duration=Längd:
+timeline.markerDetail.consoleTimerName=Timer-namn:
 timeline.markerDetail.DOMEventType=Händelsetyp:
 timeline.markerDetail.DOMEventPhase=Fas:
 timeline.markerDetail.DOMEventTargetPhase=Mål
 timeline.markerDetail.DOMEventCapturingPhase=Fånga
+timeline.markerDetail.DOMEventBubblingPhase=Bubbling
