--- a/sv-SE/browser/chrome/browser/devtools/webide.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,7 @@ error_cantConnectToApp=Kan inte ansluta till app: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Kan inte hämta tilläggslistan: %S
 
+error_appProjectsLoadFailed=Kan inte ladda projektlistan. Detta kan ske om du har använt denna profil med en nyare version av Firefox.
 
 addons_stable=stabil
 addons_unstable=ostabil
@@ -53,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
 addons_install_button=installera
 addons_uninstall_button=avinstallera
 addons_adb_label=ADB Hjälptillägg
+addons_adapters_label=Tillägg för verktygsadaptrar
 addons_adb_warning=USB enheter kommer inte att upptäckas utan detta tillägg
 addons_status_unknown=?
 addons_status_installed=Installerades
