[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -530,7 +530,7 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 ffenestr);#1 (#2 ffenestr)
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareSelectedDevices.label = Rhannu Dyfais Dewisol;Rhannu Dyfeisiau Dewisol
+getUserMedia.shareSelectedDevices.label = Rhannu'r Ddyfais Hon;Rhannu'r Dyfeisiau Hyn
 getUserMedia.shareSelectedDevices.accesskey = R
 getUserMedia.shareScreen.label = Rhannu'r Sgrin
 getUserMedia.shareApplication.label = Rhannu'r Rhaglen Hon
