--- a/cy/browser/chrome/browser/loop/loop.properties
+++ b/cy/browser/chrome/browser/loop/loop.properties
@@ -14,7 +14,7 @@ first_time_experience_title={{clientShortname}} — Ymuno â'r sgwrs
 first_time_experience_button_label=Cychwyn Arni
 
 share_link_header_text=Rhannu'r ddolen i wahodd rhywun i siarad:
-invite_header_text=Gwahodd rhywun i ymuno a chi.
+invite_header_text=Gwahodd rhywun i ymuno â chi.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
