Bug 1098661 - Update sync in-content preferences UI to match FxA migration flows

--- a/pl/browser/chrome/browser/accounts.properties
+++ b/pl/browser/chrome/browser/accounts.properties
@@ -11,3 +11,6 @@ needVerifiedUserShort=Adres „%S” nie został zweryfikowany
 needVerifiedUserLong=Otwórz odnośnik weryfikacyjny z wiadomości wysłanej na adres „%S”
 resendVerificationEmail.label=Wyślij ponownie
 resendVerificationEmail.accessKey=W
+
+forgetMigration.label=Usuń
+forgetMigration.accessKey=s
