Bug 1109430 - Sync migrator module should show confirmation after resending verification email

--- a/pl/browser/chrome/browser/accounts.properties
+++ b/pl/browser/chrome/browser/accounts.properties
@@ -14,3 +14,10 @@ resendVerificationEmail.accessKey=W
 
 forgetMigration.label=Usuń
 forgetMigration.accessKey=s
+
+verificationSentTitle=Wysłano wiadomość weryfikacyjną
+verificationSentHeading=Odnośnik weryfikacyjny został wysłany na adres „%S”
+verificationSentDescription=Aby rozpocząć synchronizację, należy sprawdzić pocztę i otworzyć przesłany odnośnik.
+verificationNotSentTitle=Błąd wysyłania wiadomości weryfikacyjnej
+verificationNotSentHeading=Nie udało się wysłać odnośnika weryfikacyjnego
+verificationNotSentDescription=Proszę spróbować później
