Aviary.pl bug 4980 - Literówki w security.properties

--- a/pl/dom/chrome/security/security.properties
+++ b/pl/dom/chrome/security/security.properties
@@ -13,5 +13,5 @@ LoadingMixedActiveContent=Wczytywanie mieszanej (niezabezpieczonej) interaktywne
 LoadingMixedDisplayContent=Wczytywanie mieszanej (niezabezpieczonej) prezentacyjnej treści na zabezpieczonej stronie „%1$S”
 BothAllowScriptsAndSameOriginPresent=Ramka posiadająca wartości „allow-scripts” oraz „allow-same-origin” dla atrybutu „sandbox” może usunąć ten atrybut.
 
-WeakProtocolVersionWarning=Serwer używa do szyfrowania, przetarzałego i niebezpiecznego protokołu SSL 3.0.
-WeakCipherSuiteWarning=Serwer używa przetarzałego i niebezpiecznego szyfrowania RC4.
+WeakProtocolVersionWarning=Serwer używa do szyfrowania, przestarzałego i niebezpiecznego protokołu SSL 3.0.
+WeakCipherSuiteWarning=Serwer używa przestarzałego i niebezpiecznego szyfrowania RC4.
