Aviary.pl bug 4979 - conflicting accesskeys in color prferences dialog

--- a/pl/toolkit/chrome/global/dialog.properties
+++ b/pl/toolkit/chrome/global/dialog.properties
@@ -8,5 +8,5 @@ button-help=Pomoc
 button-disclosure=Więcej informacji
 accesskey-accept=
 accesskey-cancel=
-accesskey-help=P
-accesskey-disclosure=W
+accesskey-help=
+accesskey-disclosure=
