[dom] Bug 1092320 - Log a warning to the console when will-change is out of budget

--- a/fr/dom/chrome/dom/dom.properties
+++ b/fr/dom/chrome/dom/dom.properties
@@ -207,3 +207,5 @@ ImportXULIntoContentWarning=L'importation de nœuds XUL dans le contenu d'un doc
 XMLDocumentLoadPrincipalMismatch=L'utilisation de document.load est interdite sur les documents provenant d'autres fenêtres. Seule la fenêtre dans laquelle le document a été créé est autorisée à appeler .load sur ce document. Utilisez de préférence XMLHttpRequest à la place.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Une transaction IndexedDB incomplète a été annulée en raison de la navigation vers une autre page.
+# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=La mémoire consommée par will-change est trop importante. La surface couvre %1$S pixels, le budget correspond à la surface du document multipliée par %2$S (%3$S pixels). Toutes les occurrences de will-change présentes dans le document sont ignorées lorsque le budget est dépassé.
